--- a/Destinos/Bahia.html
+++ b/Destinos/Bahia.html
@@ -23,6 +23,24 @@
         background-color: #34495e;
         overflow-x: hidden;
       }
+
+      .buy-btn {
+        align-self: center;
+        background-color: #3498db;
+        border: none;
+        color: white;
+        padding: 10px 14px;
+        text-align: center;
+        text-decoration: none;
+        font-size: 14px;
+        margin: 4px 2px;
+        cursor: pointer;
+        border-radius: 100px;
+        width: 500px;
+        height: 50px;
+        margin-left: 650px;
+      }
+      
     </style>
     <header>
       <div class="container2">
@@ -53,11 +71,7 @@
       style="margin-top: 40px; color: rgb(255, 255, 255); text-align: center"
       id="titulo"
     >
-<<<<<<< HEAD
       Porto Seguro Praia Resort
-=======
-      Hotel Tivoli Mofarrej
->>>>>>> 177dc05015e63d143e28ace3b956ca64348e5fc6
     </h2>
     <br />
     <h3
@@ -71,19 +85,11 @@
         margin-bottom: 20px;
       "
     >
-<<<<<<< HEAD
       O cliente estará hospedado no confortável Porto Seguro Praia Resort,
       situado em frente às belas praias de Porto Seguro. Seu quarto é uma suíte
       padrão, decorada com simplicidade e conforto, equipada com uma cama
       king-size, área de estar, banheiro privativo e varanda com vista para o
       mar ou para os jardins do resort.
-=======
-      O cliente estará hospedado no elegante Tivoli Mofarrej São Paulo,
-      localizado no coração da cidade. Seu quarto é uma suíte executiva,
-      decorada com estilo contemporâneo e conforto. Oferece uma cama king-size,
-      área de estar espaçosa, banheiro em mármore com chuveiro de alta pressão e
-      todas as comodidades modernas para uma estadia relaxante e luxuosa.
->>>>>>> 177dc05015e63d143e28ace3b956ca64348e5fc6
     </h3>
 
     <div class="container">
@@ -158,17 +164,10 @@
             text-align: center;
           "
         >
-<<<<<<< HEAD
           Centro Histórico de Porto Seguro: Explore o charmoso centro histórico
           de Porto Seguro, com suas ruas de paralelepípedos, casarões coloniais,
           igrejas antigas e o Marco do Descobrimento, símbolo da chegada dos
           portugueses ao Brasil em 1500.
-=======
-          Museu de Arte de São Paulo (MASP): Visite um dos mais importantes
-          museus de arte do Brasil, conhecido por sua arquitetura icônica e
-          coleção impressionante de obras de arte que abrangem desde a arte
-          europeia até a arte brasileira contemporânea.
->>>>>>> 177dc05015e63d143e28ace3b956ca64348e5fc6
         </h2>
       </li>
     </ul>
@@ -226,16 +225,9 @@
             text-align: center;
           "
         >
-<<<<<<< HEAD
           Recife de Fora: Faça um passeio de barco até o Recife de Fora, um dos
           melhores pontos de mergulho de Porto Seguro, onde é possível observar
           a diversidade de vida marinha em meio aos recifes de coral.
-=======
-          Parque Ibirapuera: Desfrute de momentos de relaxamento e lazer no
-          maior parque urbano de São Paulo, com áreas verdes, lagos, trilhas
-          para caminhada, ciclovias, espaços culturais e obras de arte ao ar
-          livre.
->>>>>>> 177dc05015e63d143e28ace3b956ca64348e5fc6
         </h2>
       </li>
     </ul>
@@ -250,11 +242,7 @@
             onclick="openModal(10)"
           />
         </div>
-<<<<<<< HEAD
         <div class="col-md-3" style="margin-bottom: 25px">
-=======
-        <div class="col-md-3" style="margin-bottom: 25px;">
->>>>>>> 177dc05015e63d143e28ace3b956ca64348e5fc6
           <img
             src="img/ibi2.png"
             class="img-thumbnail"
@@ -313,11 +301,7 @@
             onclick="openModal(14)"
           />
         </div>
-<<<<<<< HEAD
         <div class="col-md-3" style="margin-bottom: 25px">
-=======
-        <div class="col-md-3" style="margin-bottom: 25px;">
->>>>>>> 177dc05015e63d143e28ace3b956ca64348e5fc6
           <img
             src="img/mercado2.jpg"
             class="img-thumbnail"
@@ -358,16 +342,9 @@
             text-align: center;
           "
         >
-<<<<<<< HEAD
           Trancoso: Faça uma excursão até Trancoso, um charmoso vilarejo com
           suas ruas de terra, casinhas coloridas, praças arborizadas e a famosa
           Praia do Espelho, considerada uma das mais bonitas do Brasil.
-=======
-          Bairro da Liberdade: Conheça a influência cultural japonesa em São
-          Paulo explorando o bairro da Liberdade, com suas ruas decoradas, lojas
-          de produtos orientais, restaurantes típicos e a feira de rua aos
-          domingos. mundo
->>>>>>> 177dc05015e63d143e28ace3b956ca64348e5fc6
         </h2>
       </li>
     </ul>
@@ -382,11 +359,7 @@
             onclick="openModal(19)"
           />
         </div>
-<<<<<<< HEAD
         <div class="col-md-3" style="margin-bottom: 20px">
-=======
-        <div class="col-md-3" style="margin-bottom: 20px;">
->>>>>>> 177dc05015e63d143e28ace3b956ca64348e5fc6
           <img
             src="img/liber2.jpg"
             class="img-thumbnail"
@@ -415,10 +388,8 @@
     <br />
     <br />
 
-<<<<<<< HEAD
-=======
+    <button class="buy-btn">Comprar Pacote</button>
 
->>>>>>> 177dc05015e63d143e28ace3b956ca64348e5fc6
     <div class="modal">
       <div class="modal-content">
         <span class="close">&times;</span>
