--- a/Destinos/Home.html
+++ b/Destinos/Home.html
@@ -5,8 +5,8 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="Css/style.css">
-    <link rel="stylesheet" href="Css/slider.css">
+    <link rel="stylesheet" href="/Css/style.css">
+    <link rel="stylesheet" href="/Css/slider.css">
     <script src="Js/slide.js" defer></script>
     <title>Apollo Teck</title>
     
@@ -15,11 +15,11 @@
     <header>
         <div class="container2">
             <div class="logo">
-                <img src="img/apllogo.png">
+                <a href="Home.html"><img src="/img/apllogo.png"></a>
             </div>
             <div class="menu">
                 <nav>
-                    <a href="Home.html" style="margin-left: 50px;">Home</a>
+                    <a href="Home.html" style="margin-left: 155px;">Home</a>
                     <a href="pacotes.html">Pacotes</a>
                   
                 </nav>
@@ -38,32 +38,39 @@
             <input type="radio" name="btn-radio" id="radio1">
             <input type="radio" name="btn-radio" id="radio2">
             <input type="radio" name="btn-radio" id="radio3">
+            <input type="radio" name="btn-radio" id="radio4">
 
             <div class="slide-box primeiro">
-                <img class="img-desktop" src="img/slide-1.jpg" alt="slide 1">
-                <img class="img-mobile" src="img/slide-1-mob.jpg" alt="slide 1">
+                <img class="img-desktop" src="/img/slide-1.jpg" alt="slide 1">
+                <img class="img-mobile" src="/img/slide-1-mob.jpg" alt="slide 1">
             </div>
 
             <div class="slide-box">
-                <img class="img-desktop" src="img/slide-2.jpg" alt="slide 3">
-                <img class="img-mobile" src="img/slide-2-mob.jpg" alt="slide 1">
+                <img class="img-desktop" src="/img/slide-2.jpg" alt="slide 3">
+                <img class="img-mobile" src="/img/slide-2-mob.jpg" alt="slide 1">
             </div>
 
             <div class="slide-box">
-                <img class="img-desktop" src="img/slide-3.jpg" alt="slide 3">
-                <img class="img-mobile" src="img/slide-3-mob.jpg" alt="slide 3">
+                <img class="img-desktop" src="/img/slide-3.jpg" alt="slide 3">
+                <img class="img-mobile" src="/img/slide-3-mob.jpg" alt="slide 3">
+            </div>
+
+            <div class="slide-box">
+                <img class="img-desktop" src="/img/testehotel.jpg" alt="slide 4">
             </div>
 
             <div class="nav-auto">
                 <div class="auto-btn1"></div>
                 <div class="auto-btn2"></div>
                 <div class="auto-btn3"></div>
+                <div class="auto-btn4"></div>
             </div>
 
             <div class="nav-manual">
                 <label for="radio1" class="manual-btn"></label>
                 <label for="radio2" class="manual-btn"></label>
                 <label for="radio3" class="manual-btn"></label>
+                <label for="radio4" class="manual-btn"></label>
             </div>
 
         </div>
