--- a/Destinos/Manaus.html
+++ b/Destinos/Manaus.html
@@ -23,6 +23,24 @@
         background-color: #34495e;
         overflow-x: hidden;
       }
+
+      .buy-btn {
+        align-self: center;
+        background-color: #3498db;
+        border: none;
+        color: white;
+        padding: 10px 14px;
+        text-align: center;
+        text-decoration: none;
+        font-size: 14px;
+        margin: 4px 2px;
+        cursor: pointer;
+        border-radius: 100px;
+        width: 500px;
+        height: 50px;
+        margin-left: 650px;
+      }
+      
     </style>
     <header>
       <div class="container2">
@@ -371,6 +389,9 @@
     </div>
     <br />
     <br />
+
+    <button class="buy-btn">Comprar Pacote</button>
+
 
 
     <div class="modal">
