--- a/Destinos/Recife.html
+++ b/Destinos/Recife.html
@@ -8,14 +8,14 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="Css/style.css" />
-    <link rel="stylesheet" href="Css/compra.css" />
-    <link rel="stylesheet" href="Css/modal.css" />
+    <link rel="stylesheet" href="/Css/style.css" />
+    <link rel="stylesheet" href="/Css/compra.css" />
+    <link rel="stylesheet" href="/Css/modal.css" />
     <link
       rel="stylesheet"
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css"
     />
-    <title>Brasília</title>
+    <title>Recife</title>
   </head>
   <body>
     <style>
@@ -23,17 +23,32 @@
         background-color: #34495e;
         overflow-x: hidden;
       }
+      .buy-btn {
+        align-self: center;
+        background-color: #3498db;
+        border: none;
+        color: white;
+        padding: 10px 14px;
+        text-align: center;
+        text-decoration: none;
+        font-size: 14px;
+        margin: 4px 2px;
+        cursor: pointer;
+        border-radius: 100px;
+        width: 500px;
+        height: 50px;
+        margin-left: 650px;
+      }
     </style>
     <header>
       <div class="container2">
         <div class="logo">
-          <img src="img/apllogo.png" />
+          <img src="/img/apllogo.png" />
         </div>
         <div class="menu">
           <nav>
-            <a href="index2.html" style="margin-left: 60px">Home</a>
+            <a href="Home.html" style="margin-left: 60px">Home</a>
             <a href="pacotes.html">Pacotes</a>
-            <a href="#servicos">Nossos veiculos</a>
           </nav>
         </div>
         <div class="social">
@@ -53,7 +68,7 @@
       style="margin-top: 40px; color: rgb(255, 255, 255); text-align: center"
       id="titulo"
     >
-      Royal Tulip Brasília Alvorada
+      Nobile Suítes Executive
     </h2>
     <br />
     <h3
@@ -67,19 +82,18 @@
         margin-bottom: 20px;
       "
     >
-      cliente estará hospedado no luxuoso Royal Tulip Brasília Alvorada, situado
-      às margens do Lago Paranoá. Seu quarto é uma suíte executiva,
-      elegantemente decorada com design moderno e conforto. Oferece uma cama
-      king-size, área de estar espaçosa, vista panorâmica da cidade ou do lago,
-      banheiro em mármore com banheira de imersão e todas as comodidades
-      necessárias para uma estadia luxuosa.
+      O cliente estará hospedado no confortável Nobile Suítes Executive,
+      localizado em uma área privilegiada de Recife. Seu quarto é uma suíte
+      moderna e aconchegante, equipada com uma cama king-size, área de estar
+      espaçosa, banheiro privativo e todas as comodidades necessárias para uma
+      estadia relaxante.
     </h3>
 
     <div class="container">
       <div class="row">
         <div class="col-md-3">
           <img
-            src="img/HotelBR/hotelbra1.jpg"
+            src="/img/HotelRE/recifehotel1.png"
             alt="Image 1"
             class="img-thumbnail"
             onclick="openModal(0)"
@@ -87,26 +101,22 @@
         </div>
         <div class="col-md-3">
           <img
-            src="img/HotelBR/hotelbra2.jpg"
+            src="/img/HotelRE/recifehotel2.png"
             style="margin-bottom: 20px"
             alt="Image 2"
             class="img-thumbnail"
             onclick="openModal(1)"
           />
           <img
-            src="img/HotelBR/hotelbra3.jpg"
-<<<<<<< HEAD
+            src="/img/HotelRE/recifehotel3.png"
             alt="Image 3"
-=======
-            alt="imagem 3"
->>>>>>> 177dc05015e63d143e28ace3b956ca64348e5fc6
             class="img-thumbnail"
             onclick="openModal(2)"
           />
         </div>
         <div class="col-md-3">
           <img
-            src="img/HotelBR/hotelbra4.jpg"
+            src="/img/HotelRE/recifehotel4.png"
             alt="Image 4"
             class="img-thumbnail"
             onclick="openModal(3)"
@@ -114,19 +124,15 @@
         </div>
         <div class="col-md-3">
           <img
-            src="img/HotelBR/hotelbra5.jpg"
+            src="/img/HotelRE/recifehotel5.png"
             style="margin-bottom: 20px"
             alt="Image 5"
             class="img-thumbnail"
             onclick="openModal(4)"
           />
           <img
-            src="img/HotelBR/hotelbra6.jpg"
-<<<<<<< HEAD
+            src="/img/HotelRE/recifehotel6.png"
             alt="Image 6"
-=======
-            alt="imagem 6"
->>>>>>> 177dc05015e63d143e28ace3b956ca64348e5fc6
             class="img-thumbnail"
             onclick="openModal(5)"
           />
@@ -155,9 +161,10 @@
             text-align: center;
           "
         >
-          Congresso Nacional: Visite o imponente edifício do Congresso Nacional,
-          projetado por Oscar Niemeyer, e conheça a história e o funcionamento
-          do poder legislativo brasileiro.
+          Centro Histórico de Recife: Explore o charmoso centro histórico de
+          Recife, com seus casarões coloniais, igrejas centenárias, museus,
+          praças e o colorido Mercado de São José, onde é possível encontrar
+          artesanato local e produtos típicos da região
         </h2>
       </li>
     </ul>
@@ -168,15 +175,15 @@
       <div class="row">
         <div class="col-md-3" style="margin-left: 220px">
           <img
-            src="img/TurismoBR/congre1.jpg"
+            src="/img/TursimoRE/centrorecife1.png"
             class="img-thumbnail"
             alt="imagem 7"
             onclick="openModal(6)"
           />
         </div>
-        <div class="col-md-3" style="margin-bottom: 20px">
+        <div class="col-md-3">
           <img
-            src="img/TurismoBR/congre2.webp"
+            src="/img/TursimoRE/centrorecife2.jpg"
             class="img-thumbnail"
             alt="imagem 8"
             onclick="openModal(7)"
@@ -184,7 +191,7 @@
         </div>
         <div class="col-md-3">
           <img
-            src="img/TurismoBR/congre3.jpg"
+            src="/img/TursimoRE/centrorecife3.jpg"
             class="img-thumbnail"
             alt="imagem 9"
             onclick="openModal(8)"
@@ -192,7 +199,7 @@
         </div>
         <div class="col-md-3" style="margin-left: 620px; margin-bottom: 20px">
           <img
-            src="img/TurismoBR/congre4.jpg"
+            src="/img/TursimoRE/centrorecife4.jpg"
             class="img-thumbnail"
             alt="imagem 10"
             onclick="openModal(9)"
@@ -215,44 +222,45 @@
             text-align: center;
           "
         >
-          Palácio da Alvorada: Contemple a elegância do Palácio da Alvorada,
-          residência oficial do Presidente da República, com sua arquitetura
-          moderna e jardins exuberantes à beira do Lago Paranoá. livre.
+          Olinda: Faça uma excursão até a encantadora cidade de Olinda,
+          considerada Patrimônio Cultural da Humanidade pela UNESCO, com suas
+          ladeiras de paralelepípedos, casarões coloridos, igrejas barrocas e o
+          famoso Carnaval.
         </h2>
       </li>
     </ul>
 
-    <div class="ibirapuera">
+    <div class="Mercadão">
       <div class="row">
         <div class="col-md-3" style="margin-left: 220px">
           <img
-            src="img/TurismoBR/palacio1.jpg"
+            src="/img/TursimoRE/olinda.png"
             class="img-thumbnail"
-            alt="imagem 11"
+            alt="imagem 15"
             onclick="openModal(10)"
           />
         </div>
-        <div class="col-md-3" style="margin-bottom: 25px">
+        <div class="col-md-3" style="margin-bottom: 15px">
           <img
-            src="img/TurismoBR/palacio2.jpg"
+            src="/img/TursimoRE/olinda2.jpg"
             class="img-thumbnail"
-            alt="imagem 12"
+            alt="imagem 16"
             onclick="openModal(11)"
           />
         </div>
         <div class="col-md-3">
           <img
-            src="img/TurismoBR/palacio3.jpg"
+            src="/img/TursimoRE/olinda3.png"
             class="img-thumbnail"
-            alt="imagem 13"
+            alt="imagem 17"
             onclick="openModal(12)"
           />
         </div>
-        <div class="col-md-3" style="margin-left: 620px">
+        <div class="col-md-3" style="margin-left: 620px; margin-bottom: 20px">
           <img
-            src="img/TurismoBR/palacio4.jpg"
+            src="/img/TursimoRE/olinda4.png"
             class="img-thumbnail"
-            alt="imagem 14"
+            alt="imagem 18"
             onclick="openModal(13)"
           />
         </div>
@@ -273,46 +281,45 @@
             text-align: center;
           "
         >
-          Catedral Metropolitana de Brasília: Maravilhe-se com a arquitetura
-          única da Catedral Metropolitana de Brasília, projetada por Oscar
-          Niemeyer, com seus vitrais coloridos e formas geométricas
-          impressionantes.
+          Instituto Ricardo Brennand: Visite o Instituto Ricardo Brennand, um
+          complexo cultural que abriga um acervo impressionante de obras de
+          arte, armas antigas, objetos históricos e um castelo medieval, em meio
+          a belos jardins.
         </h2>
       </li>
     </ul>
 
-    <div class="Mercadão">
+    <div class="Liberdade">
       <div class="row">
-        <div class="col-md-3" style="margin-left: 220px; margin-bottom: 20px;">
+        <div class="col-md-3" style="margin-left: 220px">
           <img
-          
-            src="img/TurismoBR/catedral2.jpg"
+            src="/img/TursimoRE/brenan1.jpg"
             class="img-thumbnail"
-            alt="imagem 15"
+            alt="imagem 18"
             onclick="openModal(14)"
           />
         </div>
-        <div class="col-md-3" style="margin-bottom: 25px">
+        <div class="col-md-3" style="margin-bottom: 20px">
           <img
-            src="img/TurismoBR/catedral3.jpg"
+            src="/img/TursimoRE/brenan2.png"
             class="img-thumbnail"
-            alt="imagem 16"
+            alt="imagem 19"
             onclick="openModal(15)"
           />
         </div>
         <div class="col-md-3">
           <img
-            src="img/TurismoBR/catedral1.jpg"
+            src="/img/TursimoRE/brenan3.jpg"
             class="img-thumbnail"
-            alt="imagem 17"
+            alt="imagem 20"
             onclick="openModal(16)"
           />
         </div>
-        <div class="col-md-3" style="margin-left: 645px; margin-bottom: 20px">
+        <div class="col-md-3" style="margin-left: 620px; margin-bottom: 20px">
           <img
-            src="img/TurismoBR/catedral4.jpg"
+            src="/img/TursimoRE/brenan4.jpg"
             class="img-thumbnail"
-            alt="imagem 18"
+            alt="imagem 21"
             onclick="openModal(17)"
           />
         </div>
@@ -321,81 +328,7 @@
     <br />
     <br />
 
-    <ul>
-      <li style="color: aliceblue">
-        <h2
-          style="
-            font-family: system-ui, -apple-system, BlinkMacSystemFont,
-              'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans',
-              'Helvetica Neue', sans-serif;
-            font-weight: 100;
-            color: aliceblue;
-            text-align: center;
-          "
-        >
-          Memorial JK: Conheça o Memorial JK, dedicado ao ex-presidente
-          Juscelino Kubitschek, responsável pela construção de Brasília, e
-          explore sua vida e legado através de exposições e acervos históricos.
-        </h2>
-      </li>
-    </ul>
-    <br>
-
-    <div class="Liberdade">
-      <div class="row">
-        <div class="col-md-3" style="margin-left: 220px">
-          <img
-  
-            src="img/TurismoBR/jk1.png"
-            class="img-thumbnail"
-            alt="imagem 18"
-<<<<<<< HEAD
-            onclick="openModal(18)"
-=======
-            onclick="openModal(19)"
->>>>>>> 177dc05015e63d143e28ace3b956ca64348e5fc6
-          />
-        </div>
-        <div class="col-md-3" style="margin-bottom: 20px; margin-left: 20px;">
-          <img
-            src="img/TurismoBR/jk4.png"
-            class="img-thumbnail"
-            alt="imagem 19"
-<<<<<<< HEAD
-            onclick="openModal(19)"
-=======
-            onclick="openModal(20)"
->>>>>>> 177dc05015e63d143e28ace3b956ca64348e5fc6
-          />
-        </div>
-        <div class="col-md-3">
-          <img
-            src="img/TurismoBR/jk3.jpg"
-            class="img-thumbnail"
-            alt="imagem 20"
-<<<<<<< HEAD
-            onclick="openModal(20)"
-=======
-            onclick="openModal(19)"
->>>>>>> 177dc05015e63d143e28ace3b956ca64348e5fc6
-          />
-        </div>
-        <div class="col-md-3" style="margin-left: 670px; margin-bottom: 20px">
-          <img
-            src="img/TurismoBR/jk2.jpg"
-            class="img-thumbnail"
-            alt="imagem 21"
-<<<<<<< HEAD
-            onclick="openModal(21)"
-=======
-            onclick="openModal(20)"
->>>>>>> 177dc05015e63d143e28ace3b956ca64348e5fc6
-          />
-        </div>
-      </div>
-    </div>
-    <br />
-    <br />
+    <button class="buy-btn">Comprar Pacote</button>
 
     <div class="modal">
       <div class="modal-content">
@@ -408,33 +341,24 @@
 
     <script>
       const imageUrls = [
-        "img/HotelBR/hotelbra1.jpg",
-        "img/HotelBR/hotelbra2.jpg",
-        "img/HotelBR/hotelbra3.jpg",
-        "img/HotelBR/hotelbra4.jpg",
-        "img/HotelBR/hotelbra5.jpg",
-        "img/HotelBR/hotelbra6.jpg",
-        "img/TurismoBR/congre1.jpg",
-        "img/TurismoBR/congre2.webp",
-        "img/TurismoBR/congre3.jpg",
-        "img/TurismoBR/congre4.jpg",
-        "img/TurismoBR/palacio1.jpg",
-        "img/TurismoBR/palacio2.jpg",
-        "img/TurismoBR/palacio3.jpg",
-        "img/TurismoBR/palacio4.jpg",
-        "img/TurismoBR/catedral2.jpg",
-        "img/TurismoBR/catedral3.jpg",
-        "img/TurismoBR/catedral1.jpg",
-        "img/TurismoBR/catedral4.jpg",
-        "img/TurismoBR/jk1.png",
-        "img/TurismoBR/jk4.png",
-<<<<<<< HEAD
-        "img/TurismoBR/jk3.jpg",
-        "img/TurismoBR/jk2.jpg",
-=======
-        "img/TurismoBR/jk3.png",
-        "img/TurismoBR/jk2.png",
->>>>>>> 177dc05015e63d143e28ace3b956ca64348e5fc6
+        "/img/HotelRE/recifehotel1.png",
+        "/img/HotelRE/recifehotel2.png",
+        "/img/HotelRE/recifehotel3.png",
+        "/img/HotelRE/recifehotel4.png",
+        "/img/HotelRE/recifehotel5.png",
+        "/img/HotelRE/recifehotel6.png",
+        "/img/TursimoRE/centrorecife1.png",
+        "/img/TursimoRE/centrorecife2.jpg",
+        "/img/TursimoRE/centrorecife3.jpg",
+        "/img/TursimoRE/centrorecife4.jpg",
+        "/img/TursimoRE/olinda.png",
+        "/img/TursimoRE/olinda2.jpg",
+        "/img/TursimoRE/olinda3.png",
+        "/img/TursimoRE/olinda4.png",
+        "/img/TursimoRE/brenan1.jpg",
+        "/img/TursimoRE/brenan2.png",
+        "/img/TursimoRE/brenan3.jpg",
+        "/img/TursimoRE/brenan4.jpg",
       ];
 
       const modal = document.querySelector(".modal");
@@ -443,11 +367,7 @@
 
       function openModal(index) {
         const carousel = modalContent.querySelector(".carousel");
-<<<<<<< HEAD
-        carousel.innerHTML = "";
-=======
         carousel.innerHTML = ""; // Limpa qualquer conteúdo anterior
->>>>>>> 177dc05015e63d143e28ace3b956ca64348e5fc6
 
         imageUrls.forEach((imageUrl, i) => {
           const img = document.createElement("img");
