--- a/Destinos/pacotes.html
+++ b/Destinos/pacotes.html
@@ -8,20 +8,19 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="Css/style.css" />
-    <link rel="stylesheet" href="Css/pacotes.css" />
-    <script src="Js/slide.js" defer></script>
+    <link rel="stylesheet" href="/Css/style.css" />
+    <link rel="stylesheet" href="/Css/pacotes.css" />
     <title>Apollo Teck - Pacotes</title>
   </head>
   <body>
     <header>
       <div class="container2">
         <div class="logo">
-          <img src="img/apllogo.png" />
+          <a href="Home.html"><img src="/img/apllogo.png"></a>
         </div>
         <div class="menu">
           <nav>
-            <a href="Home.html" style="margin-left: 80px">Home</a>
+            <a href="Home.html" style="margin-left: 150px">Home</a>
             <a href="pacotes.html">Pacotes</a>
           </nav>
         </div>
@@ -40,7 +39,7 @@
   <div class="Produtos" style="margin-top: 50px;">
     <div class="product" style="margin-left: 150px">
       <a href=""
-        ><img src="img/mar-e-praia.jpg" alt="" style="width: 90%; height: 90%"
+        ><img src="/img/mar-e-praia.jpg" alt="" style="width: 90%; height: 90%"
       /></a>
       <h2>São Paulo</h2>
       <p class="price">R$ 50,00</p>
@@ -48,7 +47,7 @@
     </div>
     <div class="product">
       <a href=""
-        ><img src="img/mar-e-praia.jpg" alt="" style="width: 90%; height: 90%"
+        ><img src="/img/mar-e-praia.jpg" alt="" style="width: 90%; height: 90%"
       /></a>
       <h2>Brasilia</h2>
       <p class="price">R$ 80,00</p>
@@ -56,7 +55,7 @@
     </div>
     <div class="product">
       <a href=""
-        ><img src="img/mar-e-praia.jpg" alt="" style="width: 90%; height: 90%"
+        ><img src="/img/mar-e-praia.jpg" alt="" style="width: 90%; height: 90%"
       /></a>
       <h2>Rio de Janeiro</h2>
       <p class="price">R$ 30,00</p>
@@ -66,23 +65,23 @@
     </div>
     <div class="product">
       <a href=""
-        ><img src="img/mar-e-praia.jpg" alt="" style="width: 90%; height: 90%"
+        ><img src="/img/mar-e-praia.jpg" alt="" style="width: 90%; height: 90%"
       /></a>
       <h2>Recife</h2>
       <p class="price">R$ 30,00</p>
       <a href="Recife.html"><button class="buy-btn">Ver Mais</button></a>
     </div>
-    <div class="product" style="margin-left: 150px;">
+    <div class="product" style="margin-left: 10px;">
       <a href=""
-        ><img src="img/mar-e-praia.jpg" alt="" style="width: 90%; height: 90%"
+        ><img src="/img/mar-e-praia.jpg" alt="" style="width: 90%; height: 90%"
       /></a>
       <h2>Maragogi</h2>
       <p class="price">R$ 30,00</p>
       <a href="Maragogi.html"><button class="buy-btn">Ver Mais</button></a>
     </div>
-    <div class="product" style="">
+    <div class="product" style="margin-left: 475px;">
       <a href=""
-        ><img src="img/mar-e-praia.jpg" alt="Itá-img" width="90%" height="90%"
+        ><img src="/img/mar-e-praia.jpg" alt="Itá-img" width="90%" height="90%"
       /></a>
       <h2 style>Itamáraca</h2>
       <p class="price">R$ 30,00</p>
@@ -90,7 +89,7 @@
     </div>
     <div class="product">
       <a href=""
-        ><img src="img/mar-e-praia.jpg" alt="" style="width: 90%; height: 90%"
+        ><img src="/img/mar-e-praia.jpg" alt="" style="width: 90%; height: 90%"
       /></a>
       <h2>Maranhão</h2>
       <p class="price">R$ 30,00</p>
@@ -98,7 +97,7 @@
     </div>
     <div class="product">
       <a href=""
-        ><img src="img/mar-e-praia.jpg" alt="" style="width: 90%; height: 90%"
+        ><img src="/img/mar-e-praia.jpg" alt="" style="width: 90%; height: 90%"
       /></a>
       <h2>Bahia</h2>
       <p class="price">R$ 30,00</p>
@@ -109,6 +108,5 @@
   </div>
   <br>
   <br>
-  br
   </body>
 </html>
