--- a/Destinos/pagamento.html
+++ b/Destinos/pagamento.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt-br">
 <head>
     <script src="https://kit.fontawesome.com/6dda5f6271.js" crossorigin="anonymous"></script>
     <meta charset="UTF-8" />
@@ -27,7 +27,7 @@
         </div>
         <div class="menu">
             <nav>
-                <a href="index2.html" style="margin-left: 70px;">Home</a>
+                <a href="Home.html" style="margin-left: 70px;">Home</a>
                 <a href="pacotes.html">Pacotes</a>
                 <a href="#servicos">Nossos veiculos</a>
             </nav>
@@ -117,7 +117,6 @@
 function calcularPreco(classe) {
     var precoInicial = 0;
 
-    // Define o preço inicial com base na classe selecionada
     switch (classe) {
         case 'economica':
             precoInicial = 50;
