--- a/Destinos/Brasilia.html
+++ b/Destinos/Brasilia.html
@@ -15,11 +15,7 @@
       rel="stylesheet"
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css"
     />
-<<<<<<< HEAD
-    <title>Maranhão</title>
-=======
-    <title>São Paulo</title>
->>>>>>> 177dc05015e63d143e28ace3b956ca64348e5fc6
+    <title>Brasília</title>
   </head>
   <body>
     <style>
@@ -27,6 +23,24 @@
         background-color: #34495e;
         overflow-x: hidden;
       }
+
+      .buy-btn {
+        align-self: center;
+        background-color: #3498db;
+        border: none;
+        color: white;
+        padding: 10px 14px;
+        text-align: center;
+        text-decoration: none;
+        font-size: 14px;
+        margin: 4px 2px;
+        cursor: pointer;
+        border-radius: 100px;
+        width: 500px;
+        height: 50px;
+        margin-left: 650px;
+      }
+      
     </style>
     <header>
       <div class="container2">
@@ -57,11 +71,7 @@
       style="margin-top: 40px; color: rgb(255, 255, 255); text-align: center"
       id="titulo"
     >
-<<<<<<< HEAD
-      Grand São Luís Hotel
-=======
-      Hotel Tivoli Mofarrej
->>>>>>> 177dc05015e63d143e28ace3b956ca64348e5fc6
+      Royal Tulip Brasília Alvorada
     </h2>
     <br />
     <h3
@@ -75,30 +85,19 @@
         margin-bottom: 20px;
       "
     >
-<<<<<<< HEAD
-      O cliente estará hospedado no confortável Grand São Luís Hotel, localizado
-      no coração de São Luís, a capital do Maranhão. Seu quarto é uma suíte
-      deluxe, elegantemente decorada e equipada com uma cama king-size, área de
-      estar espaçosa, banheiro privativo e todas as comodidades necessárias para
-      uma estadia agradável.
-=======
-      O cliente estará hospedado no elegante Tivoli Mofarrej São Paulo,
-      localizado no coração da cidade. Seu quarto é uma suíte executiva,
-      decorada com estilo contemporâneo e conforto. Oferece uma cama king-size,
-      área de estar espaçosa, banheiro em mármore com chuveiro de alta pressão e
-      todas as comodidades modernas para uma estadia relaxante e luxuosa.
->>>>>>> 177dc05015e63d143e28ace3b956ca64348e5fc6
+      cliente estará hospedado no luxuoso Royal Tulip Brasília Alvorada, situado
+      às margens do Lago Paranoá. Seu quarto é uma suíte executiva,
+      elegantemente decorada com design moderno e conforto. Oferece uma cama
+      king-size, área de estar espaçosa, vista panorâmica da cidade ou do lago,
+      banheiro em mármore com banheira de imersão e todas as comodidades
+      necessárias para uma estadia luxuosa.
     </h3>
 
     <div class="container">
       <div class="row">
         <div class="col-md-3">
           <img
-<<<<<<< HEAD
-            src="img/HotelMA/hotel4.jpg"
-=======
-            src="img/072bc483-b6eb-4ca4-8ebe-54cbaf56bbf3.jpeg"
->>>>>>> 177dc05015e63d143e28ace3b956ca64348e5fc6
+            src="img/HotelBR/hotelbra1.jpg"
             alt="Image 1"
             class="img-thumbnail"
             onclick="openModal(0)"
@@ -106,34 +105,22 @@
         </div>
         <div class="col-md-3">
           <img
-<<<<<<< HEAD
-            src="img/HotelMA/hotel2.jpg"
-=======
-            src="img/274722f3-8d88-4868-bb9d-f80fcd7c316f.jpeg"
->>>>>>> 177dc05015e63d143e28ace3b956ca64348e5fc6
+            src="img/HotelBR/hotelbra2.jpg"
             style="margin-bottom: 20px"
             alt="Image 2"
             class="img-thumbnail"
             onclick="openModal(1)"
           />
           <img
-<<<<<<< HEAD
-            src="img/HotelMA/hotel3.jpg"
-=======
-            src="img/9dfc7850-70d1-41e0-9842-0fb95e0a9b54.jpeg"
->>>>>>> 177dc05015e63d143e28ace3b956ca64348e5fc6
-            alt="imagem 3"
+            src="img/HotelBR/hotelbra3.jpg"
+            alt="Image 3"
             class="img-thumbnail"
             onclick="openModal(2)"
           />
         </div>
         <div class="col-md-3">
           <img
-<<<<<<< HEAD
-            src="img/HotelMA/hotel5.jpg"
-=======
-            src="img/38f4fca6-6105-4405-abb6-98dafb9e4e4f.jpeg"
->>>>>>> 177dc05015e63d143e28ace3b956ca64348e5fc6
+            src="img/HotelBR/hotelbra4.jpg"
             alt="Image 4"
             class="img-thumbnail"
             onclick="openModal(3)"
@@ -141,23 +128,15 @@
         </div>
         <div class="col-md-3">
           <img
-<<<<<<< HEAD
-            src="img/HotelMA/hotel1.jpg"
-=======
-            src="img/8641b008-756c-47a5-b19b-6c323f0f4ed4.jpeg"
->>>>>>> 177dc05015e63d143e28ace3b956ca64348e5fc6
+            src="img/HotelBR/hotelbra5.jpg"
             style="margin-bottom: 20px"
             alt="Image 5"
             class="img-thumbnail"
             onclick="openModal(4)"
           />
           <img
-<<<<<<< HEAD
-            src="img/HotelMA/hotel6.jpg"
-=======
-            src="img/5439dd3b-9dac-4d74-ab58-1ca2204637ef.jpeg"
->>>>>>> 177dc05015e63d143e28ace3b956ca64348e5fc6
-            alt="imagem 6"
+            src="img/HotelBR/hotelbra6.jpg"
+            alt="Image 6"
             class="img-thumbnail"
             onclick="openModal(5)"
           />
@@ -186,17 +165,9 @@
             text-align: center;
           "
         >
-<<<<<<< HEAD
-          Centro Histórico de São Luís: Explore o charmoso centro histórico de
-          São Luís, com suas ruas de paralelepípedos, casarões coloniais,
-          igrejas antigas e praças encantadoras, declarado Patrimônio Cultural
-          da Humanidade pela UNESCO.
-=======
-          Museu de Arte de São Paulo (MASP): Visite um dos mais importantes
-          museus de arte do Brasil, conhecido por sua arquitetura icônica e
-          coleção impressionante de obras de arte que abrangem desde a arte
-          europeia até a arte brasileira contemporânea.
->>>>>>> 177dc05015e63d143e28ace3b956ca64348e5fc6
+          Congresso Nacional: Visite o imponente edifício do Congresso Nacional,
+          projetado por Oscar Niemeyer, e conheça a história e o funcionamento
+          do poder legislativo brasileiro.
         </h2>
       </li>
     </ul>
@@ -207,65 +178,36 @@
       <div class="row">
         <div class="col-md-3" style="margin-left: 220px">
           <img
-<<<<<<< HEAD
-            src="img/TurismoMA/centro3.jpg"
-=======
-            src="img/Masp1.jpg"
->>>>>>> 177dc05015e63d143e28ace3b956ca64348e5fc6
+            src="img/TurismoBR/congre1.jpg"
             class="img-thumbnail"
             alt="imagem 7"
             onclick="openModal(6)"
           />
         </div>
-        <div class="col-md-3">
+        <div class="col-md-3" style="margin-bottom: 20px">
           <img
-<<<<<<< HEAD
-            src="img/TurismoMA/centro2.jpg"
-=======
-            src="img/masp2.jpg"
->>>>>>> 177dc05015e63d143e28ace3b956ca64348e5fc6
+            src="img/TurismoBR/congre2.webp"
             class="img-thumbnail"
             alt="imagem 8"
             onclick="openModal(7)"
           />
-<<<<<<< HEAD
-          <img
-            style="margin-top: 20px"
-            src="img/TurismoMA/centro4.png"
-            class="img-thumbnail"
-            alt="imagem 10"
-            onclick="openModal(9)"
-          />
         </div>
         <div class="col-md-3">
           <img
-            src="img/TurismoMA/centro1.jpg"
-=======
-        </div>
-        <div class="col-md-3">
-          <img
-            src="img/masp3.jpg"
->>>>>>> 177dc05015e63d143e28ace3b956ca64348e5fc6
+            src="img/TurismoBR/congre3.jpg"
             class="img-thumbnail"
             alt="imagem 9"
             onclick="openModal(8)"
           />
         </div>
-<<<<<<< HEAD
-        <div
-          class="col-md-3"
-          style="margin-left: 700px; margin-bottom: 20px"
-        ></div>
-=======
-        <div class="col-md-3" style="margin-left: 700px; margin-bottom: 20px">
+        <div class="col-md-3" style="margin-left: 620px; margin-bottom: 20px">
           <img
-            src="img/masp4.jpg"
+            src="img/TurismoBR/congre4.jpg"
             class="img-thumbnail"
             alt="imagem 10"
             onclick="openModal(9)"
           />
         </div>
->>>>>>> 177dc05015e63d143e28ace3b956ca64348e5fc6
       </div>
     </div>
     <br />
@@ -283,17 +225,9 @@
             text-align: center;
           "
         >
-<<<<<<< HEAD
-          Lençóis Maranhenses: Faça uma viagem até os incríveis Lençóis
-          Maranhenses, um dos destinos mais fascinantes do Brasil, com suas
-          dunas de areia branca e lagoas de água cristalina, ideais para
-          passeios de 4x4, caminhadas e banhos refrescantes.
-=======
-          Parque Ibirapuera: Desfrute de momentos de relaxamento e lazer no
-          maior parque urbano de São Paulo, com áreas verdes, lagos, trilhas
-          para caminhada, ciclovias, espaços culturais e obras de arte ao ar
-          livre.
->>>>>>> 177dc05015e63d143e28ace3b956ca64348e5fc6
+          Palácio da Alvorada: Contemple a elegância do Palácio da Alvorada,
+          residência oficial do Presidente da República, com sua arquitetura
+          moderna e jardins exuberantes à beira do Lago Paranoá. livre.
         </h2>
       </li>
     </ul>
@@ -302,64 +236,36 @@
       <div class="row">
         <div class="col-md-3" style="margin-left: 220px">
           <img
-<<<<<<< HEAD
-            src="img/TurismoMA/len3.jpg"
-=======
-            src="img/ibi1.jpg"
->>>>>>> 177dc05015e63d143e28ace3b956ca64348e5fc6
+            src="img/TurismoBR/palacio1.jpg"
             class="img-thumbnail"
             alt="imagem 11"
             onclick="openModal(10)"
           />
         </div>
-<<<<<<< HEAD
         <div class="col-md-3" style="margin-bottom: 25px">
           <img
-            src="img/TurismoMA/len1.png"
-=======
-        <div class="col-md-3" style="margin-bottom: 25px;">
-          <img
-            src="img/ibi2.png"
->>>>>>> 177dc05015e63d143e28ace3b956ca64348e5fc6
+            src="img/TurismoBR/palacio2.jpg"
             class="img-thumbnail"
             alt="imagem 12"
             onclick="openModal(11)"
           />
-<<<<<<< HEAD
-          <img
-            style="margin-top: 20px"
-            src="img/TurismoMA/len4.jpg"
-            class="img-thumbnail"
-            alt="imagem 14"
-            onclick="openModal(13)"
-          />
         </div>
         <div class="col-md-3">
           <img
-            src="img/TurismoMA/len2.png"
-=======
-        </div>
-        <div class="col-md-3">
-          <img
-            src="img/ibi3.jpg"
->>>>>>> 177dc05015e63d143e28ace3b956ca64348e5fc6
+            src="img/TurismoBR/palacio3.jpg"
             class="img-thumbnail"
             alt="imagem 13"
             onclick="openModal(12)"
           />
         </div>
-<<<<<<< HEAD
-        <div class="col-md-3" style="margin-left: 700px"></div>
-=======
-        <div class="col-md-3" style="margin-left: 700px;">
+        <div class="col-md-3" style="margin-left: 620px">
           <img
-            src="img/ibi4.jpg"
+            src="img/TurismoBR/palacio4.jpg"
             class="img-thumbnail"
             alt="imagem 14"
             onclick="openModal(13)"
           />
         </div>
->>>>>>> 177dc05015e63d143e28ace3b956ca64348e5fc6
       </div>
     </div>
     <br />
@@ -377,43 +283,28 @@
             text-align: center;
           "
         >
-<<<<<<< HEAD
-          Alcântara: Visite a histórica cidade de Alcântara, com sua arquitetura
-          colonial preservada, igrejas centenárias, ruas de pedra e o famoso
-          Centro Histórico, que remonta aos tempos do Brasil colonial.
-=======
-          Mercado Municipal: Explore o Mercado Municipal de São Paulo, conhecido
-          como Mercadão, e deleite-se com a variedade de frutas, queijos,
-          embutidos, temperos e iguarias de diferentes partes do Brasil e do
-          mundo
->>>>>>> 177dc05015e63d143e28ace3b956ca64348e5fc6
+          Catedral Metropolitana de Brasília: Maravilhe-se com a arquitetura
+          única da Catedral Metropolitana de Brasília, projetada por Oscar
+          Niemeyer, com seus vitrais coloridos e formas geométricas
+          impressionantes.
         </h2>
       </li>
     </ul>
 
     <div class="Mercadão">
       <div class="row">
-        <div class="col-md-3" style="margin-left: 220px">
+        <div class="col-md-3" style="margin-left: 220px; margin-bottom: 20px;">
           <img
-<<<<<<< HEAD
-            src="img/TurismoMA/alcantara1.jpg"
-=======
-            src="img/mercado1.jpg"
->>>>>>> 177dc05015e63d143e28ace3b956ca64348e5fc6
+          
+            src="img/TurismoBR/catedral2.jpg"
             class="img-thumbnail"
             alt="imagem 15"
             onclick="openModal(14)"
           />
         </div>
-<<<<<<< HEAD
         <div class="col-md-3" style="margin-bottom: 25px">
           <img
-            src="img/TurismoMA/alcantara2.jpg"
-=======
-        <div class="col-md-3" style="margin-bottom: 25px;">
-          <img
-            src="img/mercado2.jpg"
->>>>>>> 177dc05015e63d143e28ace3b956ca64348e5fc6
+            src="img/TurismoBR/catedral3.jpg"
             class="img-thumbnail"
             alt="imagem 16"
             onclick="openModal(15)"
@@ -421,23 +312,15 @@
         </div>
         <div class="col-md-3">
           <img
-<<<<<<< HEAD
-            src="img/TurismoMA/alcantara3.jpg"
-=======
-            src="img/mercado3.png"
->>>>>>> 177dc05015e63d143e28ace3b956ca64348e5fc6
+            src="img/TurismoBR/catedral1.jpg"
             class="img-thumbnail"
             alt="imagem 17"
             onclick="openModal(16)"
           />
         </div>
-        <div class="col-md-3" style="margin-left: 700px; margin-bottom: 20px">
+        <div class="col-md-3" style="margin-left: 645px; margin-bottom: 20px">
           <img
-<<<<<<< HEAD
-            src="img/TurismoMA/alcantara4.jpg"
-=======
-            src="img/mercado4.png"
->>>>>>> 177dc05015e63d143e28ace3b956ca64348e5fc6
+            src="img/TurismoBR/catedral4.jpg"
             class="img-thumbnail"
             alt="imagem 18"
             onclick="openModal(17)"
@@ -447,11 +330,6 @@
     </div>
     <br />
     <br />
-<<<<<<< HEAD
-    <br />
-    <br />
-
-=======
 
     <ul>
       <li style="color: aliceblue">
@@ -465,46 +343,47 @@
             text-align: center;
           "
         >
-          Bairro da Liberdade: Conheça a influência cultural japonesa em São
-          Paulo explorando o bairro da Liberdade, com suas ruas decoradas, lojas
-          de produtos orientais, restaurantes típicos e a feira de rua aos
-          domingos. mundo
+          Memorial JK: Conheça o Memorial JK, dedicado ao ex-presidente
+          Juscelino Kubitschek, responsável pela construção de Brasília, e
+          explore sua vida e legado através de exposições e acervos históricos.
         </h2>
       </li>
     </ul>
+    <br>
 
     <div class="Liberdade">
       <div class="row">
         <div class="col-md-3" style="margin-left: 220px">
           <img
-            src="img/liber1.jpg"
+  
+            src="img/TurismoBR/jk1.png"
             class="img-thumbnail"
             alt="imagem 18"
-            onclick="openModal(19)"
+            onclick="openModal(18)"
           />
         </div>
-        <div class="col-md-3" style="margin-bottom: 20px;">
+        <div class="col-md-3" style="margin-bottom: 20px; margin-left: 20px;">
           <img
-            src="img/liber2.jpg"
+            src="img/TurismoBR/jk4.png"
             class="img-thumbnail"
             alt="imagem 19"
-            onclick="openModal(20)"
+            onclick="openModal(19)"
           />
         </div>
         <div class="col-md-3">
           <img
-            src="img/liber3.jpg"
+            src="img/TurismoBR/jk3.jpg"
             class="img-thumbnail"
             alt="imagem 20"
-            onclick="openModal(19)"
+            onclick="openModal(20)"
           />
         </div>
-        <div class="col-md-3" style="margin-left: 700px; margin-bottom: 20px">
+        <div class="col-md-3" style="margin-left: 670px; margin-bottom: 20px">
           <img
-            src="img/liber4.jpg"
+            src="img/TurismoBR/jk2.jpg"
             class="img-thumbnail"
             alt="imagem 21"
-            onclick="openModal(20)"
+            onclick="openModal(21)"
           />
         </div>
       </div>
@@ -512,8 +391,8 @@
     <br />
     <br />
 
+    <button class="buy-btn">Comprar Pacote</button>
 
->>>>>>> 177dc05015e63d143e28ace3b956ca64348e5fc6
     <div class="modal">
       <div class="modal-content">
         <span class="close">&times;</span>
@@ -525,49 +404,28 @@
 
     <script>
       const imageUrls = [
-<<<<<<< HEAD
-        "img/HotelMA/hotel4.jpg",
-        "img/HotelMA/hotel2.jpg",
-        "img/HotelMA/hotel3.jpg",
-        "img/HotelMA/hotel5.jpg",
-        "img/HotelMA/hotel1.jpg",
-        "img/HotelMA/hotel6.jpg",
-        "img/TurismoMA/centro3.jpg/",
-        "img/TurismoMA/centro2.jpg",
-        "img/TurismoMA/centro4.png",
-        "img/TurismoMA/centro1.jpg",
-        "img/TurismoMA/len3.jpg",
-        "img/TurismoMA/len1.png",
-        "img/TurismoMA/len4.jpg",
-        "img/TurismoMA/len2.jpg",
-        "img/TurismoMA/alcantara1.jpg",
-        "img/TurismoMA/alcantara2.jpg",
-        "img/TurismoMA/alcantara3.jpg",
-        "img/TurismoMA/alcantara4.jpg",
-=======
-        "img/072bc483-b6eb-4ca4-8ebe-54cbaf56bbf3.jpeg",
-        "img/274722f3-8d88-4868-bb9d-f80fcd7c316f.jpeg",
-        "img/9dfc7850-70d1-41e0-9842-0fb95e0a9b54.jpeg",
-        "img/38f4fca6-6105-4405-abb6-98dafb9e4e4f.jpeg",
-        "img/8641b008-756c-47a5-b19b-6c323f0f4ed4.jpeg",
-        "img/5439dd3b-9dac-4d74-ab58-1ca2204637ef.jpeg",
-        "img/masp1.jpg",
-        "img/masp2.jpg",
-        "img/masp3.jpg",
-        "img/masp4.jpg",
-        "img/ibi1.jpg",
-        "img/ibi2.png",
-        "img/ibi3.jpg",
-        "img/ibi4.jpg",
-        "img/mercado1.jpg",
-        "img/mercado2.jpg",
-        "img/mercado3.png",
-        "img/mercado4.png",
-        "img/liber1.jpg",
-        "img/liber2.jpg",
-        "img/liber3.jpg",
-        "img/liber4.jpg",
->>>>>>> 177dc05015e63d143e28ace3b956ca64348e5fc6
+        "img/HotelBR/hotelbra1.jpg",
+        "img/HotelBR/hotelbra2.jpg",
+        "img/HotelBR/hotelbra3.jpg",
+        "img/HotelBR/hotelbra4.jpg",
+        "img/HotelBR/hotelbra5.jpg",
+        "img/HotelBR/hotelbra6.jpg",
+        "img/TurismoBR/congre1.jpg",
+        "img/TurismoBR/congre2.webp",
+        "img/TurismoBR/congre3.jpg",
+        "img/TurismoBR/congre4.jpg",
+        "img/TurismoBR/palacio1.jpg",
+        "img/TurismoBR/palacio2.jpg",
+        "img/TurismoBR/palacio3.jpg",
+        "img/TurismoBR/palacio4.jpg",
+        "img/TurismoBR/catedral2.jpg",
+        "img/TurismoBR/catedral3.jpg",
+        "img/TurismoBR/catedral1.jpg",
+        "img/TurismoBR/catedral4.jpg",
+        "img/TurismoBR/jk1.png",
+        "img/TurismoBR/jk4.png",
+        "img/TurismoBR/jk3.jpg",
+        "img/TurismoBR/jk2.jpg",
       ];
 
       const modal = document.querySelector(".modal");
@@ -576,7 +434,7 @@
 
       function openModal(index) {
         const carousel = modalContent.querySelector(".carousel");
-        carousel.innerHTML = ""; // Limpa qualquer conteúdo anterior
+        carousel.innerHTML = "";
 
         imageUrls.forEach((imageUrl, i) => {
           const img = document.createElement("img");
