--- a/Destinos/Maranhão.html
+++ b/Destinos/Maranhão.html
@@ -8,14 +8,14 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="Css/style.css" />
-    <link rel="stylesheet" href="Css/compra.css" />
-    <link rel="stylesheet" href="Css/modal.css" />
+    <link rel="stylesheet" href="/Css/style.css" />
+    <link rel="stylesheet" href="/Css/compra.css" />
+    <link rel="stylesheet" href="/Css/modal.css" />
     <link
       rel="stylesheet"
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css"
     />
-    <title>São Paulo</title>
+    <title>Maranhão</title>
   </head>
   <body>
     <style>
@@ -23,6 +23,24 @@
         background-color: #34495e;
         overflow-x: hidden;
       }
+
+      .buy-btn {
+        align-self: center;
+        background-color: #3498db;
+        border: none;
+        color: white;
+        padding: 10px 14px;
+        text-align: center;
+        text-decoration: none;
+        font-size: 14px;
+        margin: 4px 2px;
+        cursor: pointer;
+        border-radius: 100px;
+        width: 500px;
+        height: 50px;
+        margin-left: 650px;
+      }
+      
     </style>
     <header>
       <div class="container2">
@@ -31,9 +49,8 @@
         </div>
         <div class="menu">
           <nav>
-            <a href="index2.html" style="margin-left: 60px">Home</a>
+            <a href="Home.html" style="margin-left: 60px">Home</a>
             <a href="pacotes.html">Pacotes</a>
-            <a href="#servicos">Nossos veiculos</a>
           </nav>
         </div>
         <div class="social">
@@ -53,7 +70,7 @@
       style="margin-top: 40px; color: rgb(255, 255, 255); text-align: center"
       id="titulo"
     >
-      Hotel Tivoli Mofarrej
+      Grand São Luís Hotel
     </h2>
     <br />
     <h3
@@ -67,18 +84,18 @@
         margin-bottom: 20px;
       "
     >
-      O cliente estará hospedado no elegante Tivoli Mofarrej São Paulo,
-      localizado no coração da cidade. Seu quarto é uma suíte executiva,
-      decorada com estilo contemporâneo e conforto. Oferece uma cama king-size,
-      área de estar espaçosa, banheiro em mármore com chuveiro de alta pressão e
-      todas as comodidades modernas para uma estadia relaxante e luxuosa.
+      O cliente estará hospedado no confortável Grand São Luís Hotel, localizado
+      no coração de São Luís, a capital do Maranhão. Seu quarto é uma suíte
+      deluxe, elegantemente decorada e equipada com uma cama king-size, área de
+      estar espaçosa, banheiro privativo e todas as comodidades necessárias para
+      uma estadia agradável.
     </h3>
 
     <div class="container">
       <div class="row">
         <div class="col-md-3">
           <img
-            src="img/072bc483-b6eb-4ca4-8ebe-54cbaf56bbf3.jpeg"
+            src="/img/HotelMA/hotel4.jpg"
             alt="Image 1"
             class="img-thumbnail"
             onclick="openModal(0)"
@@ -86,14 +103,14 @@
         </div>
         <div class="col-md-3">
           <img
-            src="img/274722f3-8d88-4868-bb9d-f80fcd7c316f.jpeg"
+            src="/img/HotelMA/hotel2.jpg"
             style="margin-bottom: 20px"
             alt="Image 2"
             class="img-thumbnail"
             onclick="openModal(1)"
           />
           <img
-            src="img/9dfc7850-70d1-41e0-9842-0fb95e0a9b54.jpeg"
+            src="/img/HotelMA/hotel3.jpg"
             alt="imagem 3"
             class="img-thumbnail"
             onclick="openModal(2)"
@@ -101,7 +118,7 @@
         </div>
         <div class="col-md-3">
           <img
-            src="img/38f4fca6-6105-4405-abb6-98dafb9e4e4f.jpeg"
+            src="/img/HotelMA/hotel5.jpg"
             alt="Image 4"
             class="img-thumbnail"
             onclick="openModal(3)"
@@ -109,14 +126,14 @@
         </div>
         <div class="col-md-3">
           <img
-            src="img/8641b008-756c-47a5-b19b-6c323f0f4ed4.jpeg"
+            src="/img/HotelMA/hotel1.jpg"
             style="margin-bottom: 20px"
             alt="Image 5"
             class="img-thumbnail"
             onclick="openModal(4)"
           />
           <img
-            src="img/5439dd3b-9dac-4d74-ab58-1ca2204637ef.jpeg"
+            src="/img/HotelMA/hotel6.jpg"
             alt="imagem 6"
             class="img-thumbnail"
             onclick="openModal(5)"
@@ -146,10 +163,10 @@
             text-align: center;
           "
         >
-          Museu de Arte de São Paulo (MASP): Visite um dos mais importantes
-          museus de arte do Brasil, conhecido por sua arquitetura icônica e
-          coleção impressionante de obras de arte que abrangem desde a arte
-          europeia até a arte brasileira contemporânea.
+          Centro Histórico de São Luís: Explore o charmoso centro histórico de
+          São Luís, com suas ruas de paralelepípedos, casarões coloniais,
+          igrejas antigas e praças encantadoras, declarado Patrimônio Cultural
+          da Humanidade pela UNESCO.
         </h2>
       </li>
     </ul>
@@ -160,7 +177,7 @@
       <div class="row">
         <div class="col-md-3" style="margin-left: 220px">
           <img
-            src="img/Masp1.jpg"
+            src="/img/TurismoMA/centro3.jpg"
             class="img-thumbnail"
             alt="imagem 7"
             onclick="openModal(6)"
@@ -168,28 +185,31 @@
         </div>
         <div class="col-md-3">
           <img
-            src="img/masp2.jpg"
+            src="/img/TurismoMA/centro2.jpg"
             class="img-thumbnail"
             alt="imagem 8"
             onclick="openModal(7)"
           />
-        </div>
-        <div class="col-md-3">
           <img
-            src="img/masp3.jpg"
-            class="img-thumbnail"
-            alt="imagem 9"
-            onclick="openModal(8)"
-          />
-        </div>
-        <div class="col-md-3" style="margin-left: 700px; margin-bottom: 20px">
-          <img
-            src="img/masp4.jpg"
+            style="margin-top: 20px"
+            src="/img/TurismoMA/centro4.png"
             class="img-thumbnail"
             alt="imagem 10"
             onclick="openModal(9)"
           />
         </div>
+        <div class="col-md-3">
+          <img
+            src="/img/TurismoMA/centro1.jpg"
+            class="img-thumbnail"
+            alt="imagem 9"
+            onclick="openModal(8)"
+          />
+        </div>
+        <div
+          class="col-md-3"
+          style="margin-left: 700px; margin-bottom: 20px"
+        ></div>
       </div>
     </div>
     <br />
@@ -207,10 +227,10 @@
             text-align: center;
           "
         >
-          Parque Ibirapuera: Desfrute de momentos de relaxamento e lazer no
-          maior parque urbano de São Paulo, com áreas verdes, lagos, trilhas
-          para caminhada, ciclovias, espaços culturais e obras de arte ao ar
-          livre.
+          Lençóis Maranhenses: Faça uma viagem até os incríveis Lençóis
+          Maranhenses, um dos destinos mais fascinantes do Brasil, com suas
+          dunas de areia branca e lagoas de água cristalina, ideais para
+          passeios de 4x4, caminhadas e banhos refrescantes.
         </h2>
       </li>
     </ul>
@@ -219,36 +239,36 @@
       <div class="row">
         <div class="col-md-3" style="margin-left: 220px">
           <img
-            src="img/ibi1.jpg"
+            src="/img/TurismoMA/len3.jpg"
             class="img-thumbnail"
             alt="imagem 11"
             onclick="openModal(10)"
           />
         </div>
-        <div class="col-md-3" style="margin-bottom: 25px;">
+        <div class="col-md-3" style="margin-bottom: 25px">
           <img
-            src="img/ibi2.png"
+            src="/img/TurismoMA/len1.png"
             class="img-thumbnail"
             alt="imagem 12"
             onclick="openModal(11)"
           />
-        </div>
-        <div class="col-md-3">
           <img
-            src="img/ibi3.jpg"
-            class="img-thumbnail"
-            alt="imagem 13"
-            onclick="openModal(12)"
-          />
-        </div>
-        <div class="col-md-3" style="margin-left: 700px;">
-          <img
-            src="img/ibi4.jpg"
+            style="margin-top: 20px"
+            src="/img/TurismoMA/len4.jpg"
             class="img-thumbnail"
             alt="imagem 14"
             onclick="openModal(13)"
           />
         </div>
+        <div class="col-md-3">
+          <img
+            src="/img/TurismoMA/len2.png"
+            class="img-thumbnail"
+            alt="imagem 13"
+            onclick="openModal(12)"
+          />
+        </div>
+        <div class="col-md-3" style="margin-left: 700px"></div>
       </div>
     </div>
     <br />
@@ -266,10 +286,9 @@
             text-align: center;
           "
         >
-          Mercado Municipal: Explore o Mercado Municipal de São Paulo, conhecido
-          como Mercadão, e deleite-se com a variedade de frutas, queijos,
-          embutidos, temperos e iguarias de diferentes partes do Brasil e do
-          mundo
+          Alcântara: Visite a histórica cidade de Alcântara, com sua arquitetura
+          colonial preservada, igrejas centenárias, ruas de pedra e o famoso
+          Centro Histórico, que remonta aos tempos do Brasil colonial.
         </h2>
       </li>
     </ul>
@@ -278,15 +297,15 @@
       <div class="row">
         <div class="col-md-3" style="margin-left: 220px">
           <img
-            src="img/mercado1.jpg"
+            src="/img/TurismoMA/alcantara1.jpg"
             class="img-thumbnail"
             alt="imagem 15"
             onclick="openModal(14)"
           />
         </div>
-        <div class="col-md-3" style="margin-bottom: 25px;">
+        <div class="col-md-3" style="margin-bottom: 25px">
           <img
-            src="img/mercado2.jpg"
+            src="/img/TurismoMA/alcantara2.jpg"
             class="img-thumbnail"
             alt="imagem 16"
             onclick="openModal(15)"
@@ -294,7 +313,7 @@
         </div>
         <div class="col-md-3">
           <img
-            src="img/mercado3.png"
+            src="/img/TurismoMA/alcantara3.jpg"
             class="img-thumbnail"
             alt="imagem 17"
             onclick="openModal(16)"
@@ -302,7 +321,7 @@
         </div>
         <div class="col-md-3" style="margin-left: 700px; margin-bottom: 20px">
           <img
-            src="img/mercado4.png"
+            src="/img/TurismoMA/alcantara4.jpg"
             class="img-thumbnail"
             alt="imagem 18"
             onclick="openModal(17)"
@@ -312,66 +331,10 @@
     </div>
     <br />
     <br />
-
-    <ul>
-      <li style="color: aliceblue">
-        <h2
-          style="
-            font-family: system-ui, -apple-system, BlinkMacSystemFont,
-              'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans',
-              'Helvetica Neue', sans-serif;
-            font-weight: 100;
-            color: aliceblue;
-            text-align: center;
-          "
-        >
-          Bairro da Liberdade: Conheça a influência cultural japonesa em São
-          Paulo explorando o bairro da Liberdade, com suas ruas decoradas, lojas
-          de produtos orientais, restaurantes típicos e a feira de rua aos
-          domingos. mundo
-        </h2>
-      </li>
-    </ul>
-
-    <div class="Liberdade">
-      <div class="row">
-        <div class="col-md-3" style="margin-left: 220px">
-          <img
-            src="img/liber1.jpg"
-            class="img-thumbnail"
-            alt="imagem 18"
-            onclick="openModal(19)"
-          />
-        </div>
-        <div class="col-md-3" style="margin-bottom: 20px;">
-          <img
-            src="img/liber2.jpg"
-            class="img-thumbnail"
-            alt="imagem 19"
-            onclick="openModal(20)"
-          />
-        </div>
-        <div class="col-md-3">
-          <img
-            src="img/liber3.jpg"
-            class="img-thumbnail"
-            alt="imagem 20"
-            onclick="openModal(19)"
-          />
-        </div>
-        <div class="col-md-3" style="margin-left: 700px; margin-bottom: 20px">
-          <img
-            src="img/liber4.jpg"
-            class="img-thumbnail"
-            alt="imagem 21"
-            onclick="openModal(20)"
-          />
-        </div>
-      </div>
-    </div>
     <br />
     <br />
 
+    <button class="buy-btn">Comprar Pacote</button>
 
     <div class="modal">
       <div class="modal-content">
@@ -384,28 +347,24 @@
 
     <script>
       const imageUrls = [
-        "img/072bc483-b6eb-4ca4-8ebe-54cbaf56bbf3.jpeg",
-        "img/274722f3-8d88-4868-bb9d-f80fcd7c316f.jpeg",
-        "img/9dfc7850-70d1-41e0-9842-0fb95e0a9b54.jpeg",
-        "img/38f4fca6-6105-4405-abb6-98dafb9e4e4f.jpeg",
-        "img/8641b008-756c-47a5-b19b-6c323f0f4ed4.jpeg",
-        "img/5439dd3b-9dac-4d74-ab58-1ca2204637ef.jpeg",
-        "img/masp1.jpg",
-        "img/masp2.jpg",
-        "img/masp3.jpg",
-        "img/masp4.jpg",
-        "img/ibi1.jpg",
-        "img/ibi2.png",
-        "img/ibi3.jpg",
-        "img/ibi4.jpg",
-        "img/mercado1.jpg",
-        "img/mercado2.jpg",
-        "img/mercado3.png",
-        "img/mercado4.png",
-        "img/liber1.jpg",
-        "img/liber2.jpg",
-        "img/liber3.jpg",
-        "img/liber4.jpg",
+        "/img/HotelMA/hotel4.jpg",
+        "/img/HotelMA/hotel2.jpg",
+        "/img/HotelMA/hotel3.jpg",
+        "/img/HotelMA/hotel5.jpg",
+        "/img/HotelMA/hotel1.jpg",
+        "/img/HotelMA/hotel6.jpg",
+        "/img/TurismoMA/centro3.jpg/",
+        "/img/TurismoMA/centro2.jpg",
+        "/img/TurismoMA/centro4.png",
+        "/img/TurismoMA/centro1.jpg",
+        "/img/TurismoMA/len3.jpg",
+        "/img/TurismoMA/len1.png",
+        "/img/TurismoMA/len4.jpg",
+        "/img/TurismoMA/len2.jpg",
+        "/img/TurismoMA/alcantara1.jpg",
+        "/img/TurismoMA/alcantara2.jpg",
+        "/img/TurismoMA/alcantara3.jpg",
+        "/img/TurismoMA/alcantara4.jpg",
       ];
 
       const modal = document.querySelector(".modal");
