--- a/Destinos/Rio de Janeiro.html
+++ b/Destinos/Rio de Janeiro.html
@@ -8,14 +8,14 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="Css/style.css" />
-    <link rel="stylesheet" href="Css/compra.css" />
-    <link rel="stylesheet" href="Css/modal.css" />
+    <link rel="stylesheet" href="/Css/style.css" />
+    <link rel="stylesheet" href="/Css/compra.css" />
+    <link rel="stylesheet" href="/Css/modal.css" />
     <link
       rel="stylesheet"
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css"
     />
-    <title>São Paulo</title>
+    <title>Rio de Janeiro</title>
   </head>
   <body>
     <style>
@@ -23,17 +23,34 @@
         background-color: #34495e;
         overflow-x: hidden;
       }
+
+      .buy-btn {
+        align-self: center;
+        background-color: #3498db;
+        border: none;
+        color: white;
+        padding: 10px 14px;
+        text-align: center;
+        text-decoration: none;
+        font-size: 14px;
+        margin: 4px 2px;
+        cursor: pointer;
+        border-radius: 100px;
+        width: 500px;
+        height: 50px;
+        margin-left: 650px;
+      }
+      
     </style>
     <header>
       <div class="container2">
         <div class="logo">
-          <img src="img/apllogo.png" />
+          <img src="/img/apllogo.png" />
         </div>
         <div class="menu">
           <nav>
             <a href="index2.html" style="margin-left: 60px">Home</a>
             <a href="pacotes.html">Pacotes</a>
-            <a href="#servicos">Nossos veiculos</a>
           </nav>
         </div>
         <div class="social">
@@ -53,7 +70,7 @@
       style="margin-top: 40px; color: rgb(255, 255, 255); text-align: center"
       id="titulo"
     >
-      Hotel Tivoli Mofarrej
+      Copacabana Palace
     </h2>
     <br />
     <h3
@@ -67,18 +84,19 @@
         margin-bottom: 20px;
       "
     >
-      O cliente estará hospedado no elegante Tivoli Mofarrej São Paulo,
-      localizado no coração da cidade. Seu quarto é uma suíte executiva,
-      decorada com estilo contemporâneo e conforto. Oferece uma cama king-size,
-      área de estar espaçosa, banheiro em mármore com chuveiro de alta pressão e
-      todas as comodidades modernas para uma estadia relaxante e luxuosa.
+      O cliente estará hospedado no lendário Belmond Copacabana Palace, um dos
+      hotéis mais icônicos do Rio de Janeiro. Seu quarto é uma suíte luxuosa com
+      vista para o mar, elegantemente decorada com móveis de design clássico e
+      contemporâneo. Oferece uma cama king-size, área de estar espaçosa,
+      banheiro em mármore com banheira de hidromassagem e todas as comodidades
+      de luxo para uma estadia inesquecível.
     </h3>
 
     <div class="container">
       <div class="row">
         <div class="col-md-3">
           <img
-            src="img/HotelSP/072bc483-b6eb-4ca4-8ebe-54cbaf56bbf3.jpeg"
+            src="/img/HotelRJ/copa1.png"
             alt="Image 1"
             class="img-thumbnail"
             onclick="openModal(0)"
@@ -86,40 +104,41 @@
         </div>
         <div class="col-md-3">
           <img
-            src="img/HotelSP/274722f3-8d88-4868-bb9d-f80fcd7c316f.jpeg"
+            src="/img/HotelRJ/copa2.png"
             style="margin-bottom: 20px"
             alt="Image 2"
             class="img-thumbnail"
             onclick="openModal(1)"
           />
           <img
-            src="img/HotelSP/9dfc7850-70d1-41e0-9842-0fb95e0a9b54.jpeg"
-            alt="imagem 3"
+            src="/img/HotelRJ/copa3.png"
+            alt="Image 3"
             class="img-thumbnail"
             onclick="openModal(2)"
           />
         </div>
         <div class="col-md-3">
           <img
-            src="img/HotelSP/38f4fca6-6105-4405-abb6-98dafb9e4e4f.jpeg"
+            src="/img/HotelRJ/copa4.png"
             alt="Image 4"
             class="img-thumbnail"
             onclick="openModal(3)"
           />
+          <img
+          src="/img/HotelRJ/copa6.png"
+          alt="Image 6"
+          class="img-thumbnail"
+          onclick="openModal(5)"
+          style="margin-top: 25px;"
+        />
         </div>
         <div class="col-md-3">
           <img
-            src="img/HotelSP/8641b008-756c-47a5-b19b-6c323f0f4ed4.jpeg"
+            src="/img/HotelRJ/copa5.png"
             style="margin-bottom: 20px"
             alt="Image 5"
             class="img-thumbnail"
             onclick="openModal(4)"
-          />
-          <img
-            src="img/HotelSP/5439dd3b-9dac-4d74-ab58-1ca2204637ef.jpeg"
-            alt="imagem 6"
-            class="img-thumbnail"
-            onclick="openModal(5)"
           />
         </div>
       </div>
@@ -146,10 +165,9 @@
             text-align: center;
           "
         >
-          Museu de Arte de São Paulo (MASP): Visite um dos mais importantes
-          museus de arte do Brasil, conhecido por sua arquitetura icônica e
-          coleção impressionante de obras de arte que abrangem desde a arte
-          europeia até a arte brasileira contemporânea.
+          Cristo Redentor: Visite uma das Sete Maravilhas do Mundo Moderno, o
+          Cristo Redentor, no topo do Morro do Corcovado, e desfrute de uma
+          vista panorâmica deslumbrante da cidade.
         </h2>
       </li>
     </ul>
@@ -160,34 +178,37 @@
       <div class="row">
         <div class="col-md-3" style="margin-left: 220px">
           <img
-            src="img/TurismoSP/masp1.jpg"
+            src="/img/TurismoRJ/cristo1.png"
             class="img-thumbnail"
-            alt="imagem 7"
+            alt="Image 7"
             onclick="openModal(6)"
           />
         </div>
         <div class="col-md-3">
           <img
-            src="img/TurismoSP/masp2.jpg"
+          style="margin-top: 50px;"
+            src="/img/TurismoRJ/cristo2.png"
             class="img-thumbnail"
-            alt="imagem 8"
-            onclick="openModal(7)"
+            alt="Image 8"
+            onclick="openModal(7)
+            "
           />
         </div>
         <div class="col-md-3">
           <img
-            src="img/TurismoSP/masp3.jpg"
+            src="/img/TurismoRJ/cristo4.png"
             class="img-thumbnail"
-            alt="imagem 9"
+            alt="Image 9"
             onclick="openModal(8)"
           />
         </div>
-        <div class="col-md-3" style="margin-left: 620px; margin-bottom: 20px">
+        <div class="col-md-3" style="margin-left: 610px; margin-bottom: 20px">
           <img
-            src="img/TurismoSP/masp4.jpg"
+            src="/img/TurismoRJ/cristo3.png"
             class="img-thumbnail"
-            alt="imagem 10"
+            alt="Image 10"
             onclick="openModal(9)"
+            style="margin-right: 200px;"
           />
         </div>
       </div>
@@ -207,10 +228,9 @@
             text-align: center;
           "
         >
-          Parque Ibirapuera: Desfrute de momentos de relaxamento e lazer no
-          maior parque urbano de São Paulo, com áreas verdes, lagos, trilhas
-          para caminhada, ciclovias, espaços culturais e obras de arte ao ar
-          livre.
+          Pão de Açúcar: Suba de bondinho até o topo do Pão de Açúcar e desfrute
+          de uma vista deslumbrante da Baía de Guanabara, da Praia de Copacabana
+          e do Cristo Redentor.
         </h2>
       </li>
     </ul>
@@ -219,33 +239,33 @@
       <div class="row">
         <div class="col-md-3" style="margin-left: 220px">
           <img
-            src="img/TurismoSP/ibi1.jpg"
+            src="/img/TurismoRJ/pao1.png"
             class="img-thumbnail"
-            alt="imagem 11"
+            alt="Image 11"
             onclick="openModal(10)"
           />
         </div>
-        <div class="col-md-3" style="margin-bottom: 25px;">
+        <div class="col-md-3" style="margin-bottom: 25px">
           <img
-            src="img/TurismoSP/ibi2.png"
+            src="/img/TurismoRJ/pao2.png"
             class="img-thumbnail"
-            alt="imagem 12"
+            alt="Image 12"
             onclick="openModal(11)"
           />
         </div>
         <div class="col-md-3">
           <img
-            src="img/TurismoSP/ibi3.jpg"
+            src="/img/TurismoRJ/pao3.png"
             class="img-thumbnail"
-            alt="imagem 13"
+            alt="Image 13"
             onclick="openModal(12)"
           />
         </div>
-        <div class="col-md-3" style="margin-left: 620px;">
+        <div class="col-md-3" style="margin-left: 610px">
           <img
-            src="img/TurismoSP/ibi4.jpg"
+            src="/img/TurismoRJ/pao4.png"
             class="img-thumbnail"
-            alt="imagem 14"
+            alt="Image 14"
             onclick="openModal(13)"
           />
         </div>
@@ -266,10 +286,9 @@
             text-align: center;
           "
         >
-          Mercado Municipal: Explore o Mercado Municipal de São Paulo, conhecido
-          como Mercadão, e deleite-se com a variedade de frutas, queijos,
-          embutidos, temperos e iguarias de diferentes partes do Brasil e do
-          mundo
+          Lapa e Arcos da Lapa: Conheça o bairro boêmio da Lapa, com seus bares,
+          restaurantes, casas de show e os icônicos Arcos da Lapa, que servem
+          como um dos cartões-postais da cidade.
         </h2>
       </li>
     </ul>
@@ -278,36 +297,28 @@
       <div class="row">
         <div class="col-md-3" style="margin-left: 220px">
           <img
-            src="img/TurismoSP/mercado1.jpg"
+            src="/img/TurismoRJ/lapa1.png"
             class="img-thumbnail"
-            alt="imagem 15"
+            alt="Image 15"
             onclick="openModal(14)"
           />
         </div>
-        <div class="col-md-3" style="margin-bottom: 25px;">
+        <div class="col-md-3" style="margin-bottom: 25px">
           <img
-            src="img/TurismoSP/mercado2.jpg"
+            src="/img/TurismoRJ/lapa4.png"
             class="img-thumbnail"
-            alt="imagem 16"
+            alt="Image 16"
             onclick="openModal(15)"
           />
         </div>
         <div class="col-md-3">
           <img
-            src="img/TurismoSP/mercado3.png"
+            src="/img/TurismoRJ/lapa3.png"
             class="img-thumbnail"
-            alt="imagem 17"
+            alt="Image 17"
             onclick="openModal(16)"
           />
-        </div>
-        <div class="col-md-3" style="margin-left: 620px; margin-bottom: 20px">
-          <img
-            src="img/TurismoSP/mercado4.png"
-            class="img-thumbnail"
-            alt="imagem 18"
-            onclick="openModal(17)"
-          />
-        </div>
+        </div>  
       </div>
     </div>
     <br />
@@ -325,10 +336,10 @@
             text-align: center;
           "
         >
-          Bairro da Liberdade: Conheça a influência cultural japonesa em São
-          Paulo explorando o bairro da Liberdade, com suas ruas decoradas, lojas
-          de produtos orientais, restaurantes típicos e a feira de rua aos
-          domingos. mundo
+          A Escadaria Selarón é uma obra arquitetônica localizada entre os
+          bairros de Santa Teresa e Lapa, no Rio de Janeiro, Brasil, decorada
+          pelo artista chileno radicado no Brasil de longa data, Jorge Selarón,
+          que declarou-a como uma "homenagem ao povo brasileiro".
         </h2>
       </li>
     </ul>
@@ -337,40 +348,40 @@
       <div class="row">
         <div class="col-md-3" style="margin-left: 220px">
           <img
-            src="img/TurismoSP/liber1.jpg"
+            src="/img/TurismoRJ/esca2.png"
             class="img-thumbnail"
-            alt="imagem 18"
-            onclick="openModal(19)"
-          />
-        </div>
-        <div class="col-md-3" style="margin-bottom: 20px;">
-          <img
-            src="img/TurismoSP/liber2.jpg"
-            class="img-thumbnail"
-            alt="imagem 19"
-            onclick="openModal(20)"
+            alt="Image 19"
+            onclick="openModal(17)"
           />
         </div>
         <div class="col-md-3">
           <img
-            src="img/TurismoSP/liber3.jpg"
+            src="/img/TurismoRJ/esca.png"
             class="img-thumbnail"
-            alt="imagem 20"
-            onclick="openModal(19)"
+            alt="Image 19"
+            onclick="openModal(18)"
           />
+          <img src="/img/TurismoRJ/esca4.png" 
+            class="img-thumbnail" 
+            alt="Image 20" 
+            onclick="openModal(19)" 
+            style="margin-top: 10px;">
         </div>
-        <div class="col-md-3" style="margin-left: 620px; margin-bottom: 20px">
+        <div class="col-md-3">
           <img
-            src="img/TurismoSP/liber4.jpg"
+            src="/img/TurismoRJ/esca3.png"
             class="img-thumbnail"
-            alt="imagem 21"
+            alt="Image 21"
             onclick="openModal(20)"
           />
+        </div>
         </div>
       </div>
     </div>
     <br />
     <br />
+
+    <button class="buy-btn">Comprar Pacote</button>
 
 
     <div class="modal">
@@ -384,37 +395,37 @@
 
     <script>
       const imageUrls = [
-        "img/HotelSP/072bc483-b6eb-4ca4-8ebe-54cbaf56bbf3.jpeg",
-        "img/HotelSP/274722f3-8d88-4868-bb9d-f80fcd7c316f.jpeg",
-        "img/HotelSP/9dfc7850-70d1-41e0-9842-0fb95e0a9b54.jpeg",
-        "img/HotelSP/38f4fca6-6105-4405-abb6-98dafb9e4e4f.jpeg",
-        "img/HotelSP/8641b008-756c-47a5-b19b-6c323f0f4ed4.jpeg",
-        "img/HotelSP/5439dd3b-9dac-4d74-ab58-1ca2204637ef.jpeg",
-        "img/TurismoSP/masp1.jpg",
-        "img/TurismoSP/masp2.jpg",
-        "img/TurismoSP/masp3.jpg",
-        "img/TurismoSP/masp4.jpg",
-        "img/TurismoSP/ibi1.jpg",
-        "img/TurismoSP/ibi2.png",
-        "img/TurismoSP/ibi3.jpg",
-        "img/TurismoSP/ibi4.jpg",
-        "img/TurismoSP/mercado1.jpg",
-        "img/TurismoSP/mercado2.jpg",
-        "img/TurismoSP/mercado3.png",
-        "img/TurismoSP/mercado4.png",
-        "img/TurismoSP/liber1.jpg",
-        "img/TurismoSP/liber2.jpg",
-        "img/TurismoSP/liber3.jpg",
-        "img/TurismoSP/liber4.jpg",
-      ];
+    "/img/HotelRJ/copa1.png",
+    "/img/HotelRJ/copa2.png",
+    "/img/HotelRJ/copa3.png",
+    "/img/HotelRJ/copa4.png",
+    "/img/HotelRJ/copa5.png",
+    "/img/HotelRJ/copa6.png",
+    "/img/TurismoRJ/cristo1.png",
+    "/img/TurismoRJ/cristo2.png",
+    "/img/TurismoRJ/cristo3.png",
+    "/img/TurismoRJ/cristo4.png",
+    "/img/TurismoRJ/pao1.png",
+    "/img/TurismoRJ/pao2.png",
+    "/img/TurismoRJ/pao3.png",
+    "/img/TurismoRJ/pao4.png",
+    "/img/TurismoRJ/lapa1.png",
+    "/img/TurismoRJ/lapa4.png",
+    "/img/TurismoRJ/lapa3.png",
+    "/img/TurismoRJ/esca2.png",
+    "/img/TurismoRJ/esca.png",
+    "/img/TurismoRJ/esca4.png",
+    "/img/TurismoRJ/esca3.png"
+  ];
 
+      
       const modal = document.querySelector(".modal");
       const modalContent = modal.querySelector(".modal-content");
       const closeBtn = modalContent.querySelector(".close");
 
       function openModal(index) {
         const carousel = modalContent.querySelector(".carousel");
-        carousel.innerHTML = "";
+        carousel.innerHTML = ""; // Limpa qualquer conteúdo anterior
 
         imageUrls.forEach((imageUrl, i) => {
           const img = document.createElement("img");
