--- a/Destinos/São Paulo.html
+++ b/Destinos/São Paulo.html
@@ -8,14 +8,14 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="Css/style.css" />
-    <link rel="stylesheet" href="Css/compra.css" />
-    <link rel="stylesheet" href="Css/modal.css" />
+    <link rel="stylesheet" href="/Css/style.css" />
+    <link rel="stylesheet" href="/Css/compra.css" />
+    <link rel="stylesheet" href="/Css/modal.css" />
     <link
       rel="stylesheet"
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css"
     />
-    <title>Recife</title>
+    <title>São Paulo</title>
   </head>
   <body>
     <style>
@@ -23,17 +23,34 @@
         background-color: #34495e;
         overflow-x: hidden;
       }
+
+      .buy-btn {
+        align-self: center;
+        background-color: #3498db;
+        border: none;
+        color: white;
+        padding: 10px 14px;
+        text-align: center;
+        text-decoration: none;
+        font-size: 14px;
+        margin: 4px 2px;
+        cursor: pointer;
+        border-radius: 100px;
+        width: 500px;
+        height: 50px;
+        margin-left: 650px;
+      }
+      
     </style>
     <header>
       <div class="container2">
         <div class="logo">
-          <img src="img/apllogo.png" />
+          <img src="/img/apllogo.png" />
         </div>
         <div class="menu">
           <nav>
-            <a href="index2.html" style="margin-left: 60px">Home</a>
+            <a href="Home.html" style="margin-left: 60px">Home</a>
             <a href="pacotes.html">Pacotes</a>
-            <a href="#servicos">Nossos veiculos</a>
           </nav>
         </div>
         <div class="social">
@@ -53,7 +70,7 @@
       style="margin-top: 40px; color: rgb(255, 255, 255); text-align: center"
       id="titulo"
     >
-      Nobile Suítes Executive
+      Hotel Tivoli Mofarrej
     </h2>
     <br />
     <h3
@@ -67,18 +84,18 @@
         margin-bottom: 20px;
       "
     >
-      O cliente estará hospedado no confortável Nobile Suítes Executive,
-      localizado em uma área privilegiada de Recife. Seu quarto é uma suíte
-      moderna e aconchegante, equipada com uma cama king-size, área de estar
-      espaçosa, banheiro privativo e todas as comodidades necessárias para uma
-      estadia relaxante.
+      O cliente estará hospedado no elegante Tivoli Mofarrej São Paulo,
+      localizado no coração da cidade. Seu quarto é uma suíte executiva,
+      decorada com estilo contemporâneo e conforto. Oferece uma cama king-size,
+      área de estar espaçosa, banheiro em mármore com chuveiro de alta pressão e
+      todas as comodidades modernas para uma estadia relaxante e luxuosa.
     </h3>
 
     <div class="container">
       <div class="row">
         <div class="col-md-3">
           <img
-            src="img/HotelRE/recifehotel1.png"
+            src="/img/HotelSP/072bc483-b6eb-4ca4-8ebe-54cbaf56bbf3.jpeg"
             alt="Image 1"
             class="img-thumbnail"
             onclick="openModal(0)"
@@ -86,22 +103,22 @@
         </div>
         <div class="col-md-3">
           <img
-            src="img/HotelRE/recifehotel2.png"
+            src="/img/HotelSP/274722f3-8d88-4868-bb9d-f80fcd7c316f.jpeg"
             style="margin-bottom: 20px"
             alt="Image 2"
             class="img-thumbnail"
             onclick="openModal(1)"
           />
           <img
-            src="img/HotelRE/recifehotel3.png"
-            alt="Image 3"
+            src="/img/HotelSP/9dfc7850-70d1-41e0-9842-0fb95e0a9b54.jpeg"
+            alt="imagem 3"
             class="img-thumbnail"
             onclick="openModal(2)"
           />
         </div>
         <div class="col-md-3">
           <img
-            src="img/HotelRE/recifehotel4.png"
+            src="/img/HotelSP/38f4fca6-6105-4405-abb6-98dafb9e4e4f.jpeg"
             alt="Image 4"
             class="img-thumbnail"
             onclick="openModal(3)"
@@ -109,15 +126,15 @@
         </div>
         <div class="col-md-3">
           <img
-            src="img/HotelRE/recifehotel5.png"
+            src="/img/HotelSP/8641b008-756c-47a5-b19b-6c323f0f4ed4.jpeg"
             style="margin-bottom: 20px"
             alt="Image 5"
             class="img-thumbnail"
             onclick="openModal(4)"
           />
           <img
-            src="img/HotelRE/recifehotel6.png"
-            alt="Image 6"
+            src="/img/HotelSP/5439dd3b-9dac-4d74-ab58-1ca2204637ef.jpeg"
+            alt="imagem 6"
             class="img-thumbnail"
             onclick="openModal(5)"
           />
@@ -146,10 +163,10 @@
             text-align: center;
           "
         >
-          Centro Histórico de Recife: Explore o charmoso centro histórico de
-          Recife, com seus casarões coloniais, igrejas centenárias, museus,
-          praças e o colorido Mercado de São José, onde é possível encontrar
-          artesanato local e produtos típicos da região
+          Museu de Arte de São Paulo (MASP): Visite um dos mais importantes
+          museus de arte do Brasil, conhecido por sua arquitetura icônica e
+          coleção impressionante de obras de arte que abrangem desde a arte
+          europeia até a arte brasileira contemporânea.
         </h2>
       </li>
     </ul>
@@ -160,7 +177,7 @@
       <div class="row">
         <div class="col-md-3" style="margin-left: 220px">
           <img
-            src="img/TursimoRE/centrorecife1.png"
+            src="/img/TurismoSP/masp1.jpg"
             class="img-thumbnail"
             alt="imagem 7"
             onclick="openModal(6)"
@@ -168,7 +185,7 @@
         </div>
         <div class="col-md-3">
           <img
-            src="img/TursimoRE/centrorecife2.jpg"
+            src="/img/TurismoSP/masp2.jpg"
             class="img-thumbnail"
             alt="imagem 8"
             onclick="openModal(7)"
@@ -176,7 +193,7 @@
         </div>
         <div class="col-md-3">
           <img
-            src="img/TursimoRE/centrorecife3.jpg"
+            src="/img/TurismoSP/masp3.jpg"
             class="img-thumbnail"
             alt="imagem 9"
             onclick="openModal(8)"
@@ -184,7 +201,7 @@
         </div>
         <div class="col-md-3" style="margin-left: 620px; margin-bottom: 20px">
           <img
-            src="img/TursimoRE/centrorecife4.jpg"
+            src="/img/TurismoSP/masp4.jpg"
             class="img-thumbnail"
             alt="imagem 10"
             onclick="openModal(9)"
@@ -207,45 +224,45 @@
             text-align: center;
           "
         >
-          Olinda: Faça uma excursão até a encantadora cidade de Olinda,
-          considerada Patrimônio Cultural da Humanidade pela UNESCO, com suas
-          ladeiras de paralelepípedos, casarões coloridos, igrejas barrocas e o
-          famoso Carnaval.
+          Parque Ibirapuera: Desfrute de momentos de relaxamento e lazer no
+          maior parque urbano de São Paulo, com áreas verdes, lagos, trilhas
+          para caminhada, ciclovias, espaços culturais e obras de arte ao ar
+          livre.
         </h2>
       </li>
     </ul>
 
-    <div class="Mercadão">
+    <div class="ibirapuera">
       <div class="row">
         <div class="col-md-3" style="margin-left: 220px">
           <img
-            src="img/TursimoRE/olinda.png"
+            src="/img/TurismoSP/ibi1.jpg"
             class="img-thumbnail"
-            alt="imagem 15"
+            alt="imagem 11"
             onclick="openModal(10)"
           />
         </div>
-        <div class="col-md-3" style="margin-bottom: 15px">
+        <div class="col-md-3" style="margin-bottom: 25px;">
           <img
-            src="img/TursimoRE/olinda2.jpg"
+            src="/img/TurismoSP/ibi2.png"
             class="img-thumbnail"
-            alt="imagem 16"
+            alt="imagem 12"
             onclick="openModal(11)"
           />
         </div>
         <div class="col-md-3">
           <img
-            src="img/TursimoRE/olinda3.png"
+            src="/img/TurismoSP/ibi3.jpg"
             class="img-thumbnail"
-            alt="imagem 17"
+            alt="imagem 13"
             onclick="openModal(12)"
           />
         </div>
-        <div class="col-md-3" style="margin-left: 620px; margin-bottom: 20px">
+        <div class="col-md-3" style="margin-left: 620px;">
           <img
-            src="img/TursimoRE/olinda4.png"
+            src="/img/TurismoSP/ibi4.jpg"
             class="img-thumbnail"
-            alt="imagem 18"
+            alt="imagem 14"
             onclick="openModal(13)"
           />
         </div>
@@ -266,10 +283,69 @@
             text-align: center;
           "
         >
-          Instituto Ricardo Brennand: Visite o Instituto Ricardo Brennand, um
-          complexo cultural que abriga um acervo impressionante de obras de
-          arte, armas antigas, objetos históricos e um castelo medieval, em meio
-          a belos jardins.
+          Mercado Municipal: Explore o Mercado Municipal de São Paulo, conhecido
+          como Mercadão, e deleite-se com a variedade de frutas, queijos,
+          embutidos, temperos e iguarias de diferentes partes do Brasil e do
+          mundo
+        </h2>
+      </li>
+    </ul>
+
+    <div class="Mercadão">
+      <div class="row">
+        <div class="col-md-3" style="margin-left: 220px">
+          <img
+            src="/img/TurismoSP/mercado1.jpg"
+            class="img-thumbnail"
+            alt="imagem 15"
+            onclick="openModal(14)"
+          />
+        </div>
+        <div class="col-md-3" style="margin-bottom: 25px;">
+          <img
+            src="/img/TurismoSP/mercado2.jpg"
+            class="img-thumbnail"
+            alt="imagem 16"
+            onclick="openModal(15)"
+          />
+        </div>
+        <div class="col-md-3">
+          <img
+            src="/img/TurismoSP/mercado3.png"
+            class="img-thumbnail"
+            alt="imagem 17"
+            onclick="openModal(16)"
+          />
+        </div>
+        <div class="col-md-3" style="margin-left: 620px; margin-bottom: 20px">
+          <img
+            src="/img/TurismoSP/mercado4.png"
+            class="img-thumbnail"
+            alt="imagem 18"
+            onclick="openModal(17)"
+          />
+        </div>
+      </div>
+    </div>
+    <br />
+    <br />
+
+    <ul>
+      <li style="color: aliceblue">
+        <h2
+          style="
+            font-family: system-ui, -apple-system, BlinkMacSystemFont,
+              'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans',
+              'Helvetica Neue', sans-serif;
+            font-weight: 100;
+            color: aliceblue;
+            text-align: center;
+          "
+        >
+          Bairro da Liberdade: Conheça a influência cultural japonesa em São
+          Paulo explorando o bairro da Liberdade, com suas ruas decoradas, lojas
+          de produtos orientais, restaurantes típicos e a feira de rua aos
+          domingos. mundo
         </h2>
       </li>
     </ul>
@@ -278,40 +354,42 @@
       <div class="row">
         <div class="col-md-3" style="margin-left: 220px">
           <img
-            src="img/TursimoRE/brenan1.jpg"
+            src="/img/TurismoSP/liber1.jpg"
             class="img-thumbnail"
             alt="imagem 18"
-            onclick="openModal(14)"
+            onclick="openModal(19)"
           />
         </div>
-        <div class="col-md-3" style="margin-bottom: 20px">
+        <div class="col-md-3" style="margin-bottom: 20px;">
           <img
-            src="img/TursimoRE/brenan2.png"
+            src="/img/TurismoSP/liber2.jpg"
             class="img-thumbnail"
             alt="imagem 19"
-            onclick="openModal(15)"
+            onclick="openModal(20)"
           />
         </div>
         <div class="col-md-3">
           <img
-            src="img/TursimoRE/brenan3.jpg"
+            src="/img/TurismoSP/liber3.jpg"
             class="img-thumbnail"
             alt="imagem 20"
-            onclick="openModal(16)"
+            onclick="openModal(19)"
           />
         </div>
         <div class="col-md-3" style="margin-left: 620px; margin-bottom: 20px">
           <img
-            src="img/TursimoRE/brenan4.jpg"
+            src="/img/TurismoSP/liber4.jpg"
             class="img-thumbnail"
             alt="imagem 21"
-            onclick="openModal(17)"
+            onclick="openModal(20)"
           />
         </div>
       </div>
     </div>
     <br />
     <br />
+
+    <button class="buy-btn">Comprar Pacote</button>
 
     <div class="modal">
       <div class="modal-content">
@@ -324,24 +402,28 @@
 
     <script>
       const imageUrls = [
-        "img/HotelRE/recifehotel1.png",
-        "img/HotelRE/recifehotel2.png",
-        "img/HotelRE/recifehotel3.png",
-        "img/HotelRE/recifehotel4.png",
-        "img/HotelRE/recifehotel5.png",
-        "img/HotelRE/recifehotel6.png",
-        "img/TursimoRE/centrorecife1.png",
-        "img/TursimoRE/centrorecife2.jpg",
-        "img/TursimoRE/centrorecife3.jpg",
-        "img/TursimoRE/centrorecife4.jpg",
-        "img/TursimoRE/olinda.png",
-        "img/TursimoRE/olinda2.jpg",
-        "img/TursimoRE/olinda3.png",
-        "img/TursimoRE/olinda4.png",
-        "img/TursimoRE/brenan1.jpg",
-        "img/TursimoRE/brenan2.png",
-        "img/TursimoRE/brenan3.jpg",
-        "img/TursimoRE/brenan4.jpg",
+        "/img/HotelSP/072bc483-b6eb-4ca4-8ebe-54cbaf56bbf3.jpeg",
+        "/img/HotelSP/274722f3-8d88-4868-bb9d-f80fcd7c316f.jpeg",
+        "/img/HotelSP/9dfc7850-70d1-41e0-9842-0fb95e0a9b54.jpeg",
+        "/img/HotelSP/38f4fca6-6105-4405-abb6-98dafb9e4e4f.jpeg",
+        "/img/HotelSP/8641b008-756c-47a5-b19b-6c323f0f4ed4.jpeg",
+        "/img/HotelSP/5439dd3b-9dac-4d74-ab58-1ca2204637ef.jpeg",
+        "/img/TurismoSP/masp1.jpg",
+        "/img/TurismoSP/masp2.jpg",
+        "/img/TurismoSP/masp3.jpg",
+        "/img/TurismoSP/masp4.jpg",
+        "/img/TurismoSP/ibi1.jpg",
+        "/img/TurismoSP/ibi2.png",
+        "/img/TurismoSP/ibi3.jpg",
+        "/img/TurismoSP/ibi4.jpg",
+        "/img/TurismoSP/mercado1.jpg",
+        "/img/TurismoSP/mercado2.jpg",
+        "/img/TurismoSP/mercado3.png",
+        "/img/TurismoSP/mercado4.png",
+        "/img/TurismoSP/liber1.jpg",
+        "/img/TurismoSP/liber2.jpg",
+        "/img/TurismoSP/liber3.jpg",
+        "/img/TurismoSP/liber4.jpg",
       ];
 
       const modal = document.querySelector(".modal");
@@ -350,7 +432,7 @@
 
       function openModal(index) {
         const carousel = modalContent.querySelector(".carousel");
-        carousel.innerHTML = ""; // Limpa qualquer conteúdo anterior
+        carousel.innerHTML = "";
 
         imageUrls.forEach((imageUrl, i) => {
           const img = document.createElement("img");
